infra/k8s/users-psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-postgres
  template:
    metadata:
      labels:
        app: users-postgres
    spec:
      containers:
        - name: users-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initdb
          configMap:
            name: postgres-init-config
            items:
              - key: init.sql
                path: init.sql

---
apiVersion: v1
kind: Service
metadata:
  name: users-postgres-srv
spec:
  selector:
    app: users-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
